# matching-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
benchmarks/: engine_bench.cpp
docs/: ARCHITECTURE.md  PERF_VTUNE.md  TESTING.md
include/alpha/: signals.hpp
include/common/: config.hpp  memory_pool.hpp  ring_buffer.hpp  types.hpp
include/engine/: order_book.hpp  parser.hpp
include/strategy/: avellaneda_stoikov.hpp
src/: main.cpp
tests/: gtest_tests.cpp  unit_tests.cpp
